# mvg-cli

./: README.md  pyproject.toml
src/mvg_cli/: api.py  cli.py  display.py  favorites.py
