[project]
name = "mvg-cli"
version = "0.1.0"
description = "CLI for Munich public transport departures"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "httpx>=0.28",
]

[project.scripts]
mvg = "mvg_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mvg_cli"]
